--- a/src/components/ui/navbar.css
+++ b/src/components/ui/navbar.css
@@ -70,6 +70,10 @@
     @apply px-3 py-2 rounded-md text-sm font-medium;
 }
 
+.icon{
+    @apply mr-1;
+}
+
 .disclosure .div5{
     @apply absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0;
 }
