--- a/src/components/ui/addNewFab.css
+++ b/src/components/ui/addNewFab.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 /*FABS*/
 .fab{
-    @apply  bottom-6 right-6 fixed p-6 text-3xl;
+    @apply  bottom-6 right-6 fixed text-3xl;
     border-radius: 100%;
 }
