--- a/src/components/ui/navbar.css
+++ b/src/components/ui/navbar.css
@@ -47,15 +47,15 @@
 }
 
 .div4 .logo {
-    @apply block lg:hidden h-8 w-auto;
+    @apply text-white mr-1 text-xl ;
 }
 
-.div4 .logo2{
-    @apply hidden lg:block h-8 w-auto; 
+.div4 span {
+    @apply text-white ;
 }
 
 .div4 .div4-2{
-    @apply hidden sm:w-full sm:flex sm:ml-6 sm:items-center sm:justify-center;
+    @apply hidden sm:w-full sm:flex sm:items-center sm:justify-center;
 }
 
 .div4-2-containter{
@@ -63,7 +63,7 @@
 }
 
 .item-current1{
-    @apply bg-gray-900 text-white;
+    @apply hover:bg-gray-900 text-white;
 }
 
 .item-current2{
@@ -103,15 +103,15 @@
 }
 
 .disclosure-panel .panel{
-    @apply px-2 pt-2 pb-3 space-y-1;
+    @apply px-2 pt-2 pb-3 space-y-1 ;
 }
 
 .panel .item-1{
-    @apply bg-gray-900 text-white;
+    @apply text-white w-full text-center;
 }
 
 .panel .item-2{
-    @apply text-gray-300 hover:bg-gray-700 hover:text-white;
+    @apply text-white w-full items-center;
 }
 
 .panel .item2-1{
