funcionalidad de borrar evento realizada

--- a/src/components/ui/deleteEventFab.css
+++ b/src/components/ui/deleteEventFab.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.fab-danger{
-    @apply bottom-6 left-14 fixed;
+.fab-danger {
+    @apply bottom-6 left-14 fixed z-50;
 }
