--- a/src/components/ui/navbar.css
+++ b/src/components/ui/navbar.css
@@ -2,118 +2,118 @@
 @tailwind components;
 @tailwind utilities;
 
-.disclosure{
+.disclosure {
     @apply bg-gray-800;
 }
 
-.disclosure a{
+.disclosure a {
     @apply no-underline;
 }
 
-.disclosure .div1{
+.disclosure .div1 {
     @apply max-w-7xl mx-auto px-2 sm:px-6 lg:px-8;
 }
 
-.disclosure .div1 .div2{
+.disclosure .div1 .div2 {
     @apply relative flex items-center justify-between h-16
 }
 
-.disclosure .div1 .div2 .div3{
+.disclosure .div1 .div2 .div3 {
     @apply absolute inset-y-0 left-0 flex items-center sm:hidden;
 }
 
-.disclosure .disclosure-button{
+.disclosure .disclosure-button {
     @apply inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white;
 }
 
-.disclosure-button span{
+.disclosure-button span {
     @apply sr-only;
 }
 
-.disclosure-button .xicon{
+.disclosure-button .xicon {
     @apply block h-6 w-6;
 }
 
-.disclosure-button .menuIcon{
+.disclosure-button .menuIcon {
     @apply block h-6 w-6;
 }
 
-.disclosure .div4{
+.disclosure .div4 {
     @apply flex-1 flex items-center justify-center sm:items-stretch sm:justify-start;
 }
 
-.div4 .div4-1{
+.div4 .div4-1 {
     @apply flex-shrink-0 flex items-center
 }
 
 .div4 .logo {
-    @apply text-white mr-1 text-xl ;
+    @apply text-white mr-1 text-xl;
 }
 
 .div4 span {
-    @apply text-white ;
+    @apply text-white;
 }
 
-.div4 .div4-2{
+.div4 .div4-2 {
     @apply hidden sm:w-full sm:flex sm:items-center sm:justify-center;
 }
 
-.div4-2-containter{
-    @apply  flex space-x-4 w-1/2 justify-evenly;
+.div4-2-containter {
+    @apply flex pl-56 w-full justify-around;
 }
 
-.item-current1{
+.item-current1 {
     @apply hover:bg-gray-900 text-white;
 }
 
-.item-current2{
+.item-current2 {
     @apply text-gray-300 hover:bg-gray-700 hover:text-white;
 }
 
-.item-current2-1{
+.item-current2-1 {
     @apply px-3 py-2 rounded-md text-sm font-medium;
 }
 
-.icon{
+.icon {
     @apply mr-1;
 }
 
-.disclosure .div5{
+.disclosure .div5 {
     @apply absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0;
 }
 
-.div5 .menu{
+.div5 .menu {
     @apply ml-3 relative;
 }
 
-.menu .menu-button{
+.menu .menu-button {
     @apply bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white;
 }
 
-.menu .menu-button span{
+.menu .menu-button span {
     @apply sr-only;
 }
 
-.menu .menu-button img{
+.menu .menu-button img {
     @apply h-8 w-8 rounded-full;
 }
 
-.disclosure-panel{
+.disclosure-panel {
     @apply sm:hidden;
 }
 
-.disclosure-panel .panel{
-    @apply px-2 pt-2 pb-3 space-y-1 ;
+.disclosure-panel .panel {
+    @apply px-2 pt-2 pb-3 space-y-1;
 }
 
-.panel .item-1{
+.panel .item-1 {
     @apply text-white w-full text-center;
 }
 
-.panel .item-2{
+.panel .item-2 {
     @apply text-white w-full items-center;
 }
 
-.panel .item2-1{
+.panel .item2-1 {
     @apply block px-3 py-2 rounded-md text-base font-medium;
 }
